--- a/views/continent.ejs
+++ b/views/continent.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <img src="<%= picture %>" alt="">
-    <h4>Описание континента: <%= desc %></h4>
-  </body>
-</html>
+<% layout('./layout/page.ejs') %>
+
+<h1><%= title %></h1>
+<img src="<%= picture %>" alt="" height="500px">
+<h4>Описание континента: <%= desc %></h4>
