--- a/views/continent.ejs
+++ b/views/continent.ejs
@@ -1,5 +1,5 @@
 <% layout('./layout/page.ejs') %>
 
 <h1><%= title %></h1>
-<img src="<%= picture %>" alt="">
+<img src="<%= picture %>" alt=""/>
 <h4>Описание континента: <%= desc %></h4>
