--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,30 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: rgb(0, 0, 0);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: #ffffff;
 }
 img {
   height: 500px;
+}
+
+.main_text>p{
+  max-width: 600px;
+  margin: 50px auto;
+  text-align: center;
+}
+.main_h1{
+  text-align: center;
+  margin-top: 30px;
+}
+
+p{
+  font-size: 1.1rem;
 }
 
 a {
