--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -3,8 +3,18 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="icon" href="/images/favicon.png">
   </head>
+  
+  <header>
+
+  </header>
+
   <body>
     <%- body %>
   </body>
+
+  <footer>
+    
+  </footer>
 </html>
