Добавление навигационного меню

--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -8,9 +8,44 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script>
     <link rel="icon" href="/images/favicon.png">
   </head>
-  
-  <header>
 
+  <header>
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+      <div class="container-fluid">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Евразия</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Африка</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Сев. Америка</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Юж. Америка</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Австралия</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Антарктида</a>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav navbar-right">
+          <li>
+            <a class="nav-link" href="/logreg">Войти</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </header>
 
   <body>
