Добавление перехода между страницами

--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -17,25 +17,22 @@
             <a class="nav-link" href="/">Главная</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Главная</a>
+            <a class="nav-link" href="/eurasia">Евразия</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Евразия</a>
+            <a class="nav-link" href="/africa">Африка</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Африка</a>
+            <a class="nav-link" href="/north_america">Сев. Америка</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Сев. Америка</a>
+            <a class="nav-link" href="/south_america">Юж. Америка</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Юж. Америка</a>
+            <a class="nav-link" href="/australia">Австралия</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Австралия</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Антарктида</a>
+            <a class="nav-link" href="/antarctica">Антарктида</a>
           </li>
         </ul>
 
