--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,7 @@ img {
   max-width: 600px;
   margin: 50px auto;
   text-align: center;
+  font-size: 1em;
 }
 .main_h1{
   text-align: center;
@@ -24,7 +25,7 @@ img {
 }
 
 p{
-  font-size: 1.1rem;
+  font-size: 14px;
 }
 
 a {
