--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,4 @@
 <% layout('./layout/page.ejs') %>
 
-<div class="main_all_text">
-  <h1 class="main_h1"><%= title %></h1>
-  <div class="main_text">
-    <p><%- text %></p>
-  </div>
-</div>
+<h1><%= title %></h1>
+<p><%= text %></p>
