--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -8,48 +8,49 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script>
     <link rel="icon" href="/images/favicon.png">
   </head>
-
-  <header>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light">
-      <div class="container-fluid">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Главная</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/eurasia">Евразия</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/africa">Африка</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/north_america">Сев. Америка</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/south_america">Юж. Америка</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/australia">Австралия</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/antarctica">Антарктида</a>
-          </li>
-        </ul>
-
-        <ul class="navbar-nav navbar-right">
-          <li>
-            <a class="nav-link" href="/logreg">Войти</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
   <body>
-    <%- body %>
-  </body>
+    <header>
+      <nav class="navbar navbar-expand-sm bg-light navbar-light">
+        <div class="container-fluid">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Главная</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/eurasia">Евразия</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/africa">Африка</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/north_america">Сев. Америка</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/south_america">Юж. Америка</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/australia">Австралия</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/antarctica">Антарктида</a>
+            </li>
+          </ul>
 
-  <footer>
+          <ul class="navbar-nav navbar-right">
+            <li>
+              <a class="nav-link" href="/logreg">Войти</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <%- body %>
+    </main>
+
+    <footer>
     
-  </footer>
+    </footer>
+  </body>
 </html>
