--- a/views/continent.ejs
+++ b/views/continent.ejs
@@ -1,6 +1,11 @@
 <% layout('./layout/page.ejs') %>
-<h1><%= title %></h1>
+
 <div class="pages">
-  <img src="<%= picture %>" alt=""/ class="page_imgs">
-  <h4>Описание континента: <%= desc %></h4>
+  <div class="pages_text">
+    <h1><%= title %></h1>
+    <p>Описание континента: <%= desc %></p>
+  </div>
+  <div class="pages_img">
+    <img src="<%= picture %>" alt=""/ class=>
+  </div>
 </div>
