--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,8 +1,8 @@
 <% layout('./layout/page.ejs') %>
 
-<!-- <h1><%= message %></h1> -->
-<!-- <h2><%= error.status %></h2> -->
-<!-- <pre><%= error.stack %></pre> -->
+<!-- <h1><%= message %></h1>
+<h2><%= error.status %></h2>
+<pre><%= error.stack %></pre> -->
 <div class="error_page">
   <img src="<%= picture %>" alt="error 404" class="error_img">
   <h1><%= title %></h1> 
