--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -17,22 +17,22 @@
               <a class="nav-link" href="/">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/eurasia">Евразия</a>
+              <a class="nav-link" href="/continent/eurasia">Евразия</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/africa">Африка</a>
+              <a class="nav-link" href="/continent/africa">Африка</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/north_america">Сев. Америка</a>
+              <a class="nav-link" href="/continent/north_america">Сев. Америка</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/south_america">Юж. Америка</a>
+              <a class="nav-link" href="/continent/south_america">Юж. Америка</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/australia">Австралия</a>
+              <a class="nav-link" href="/continent/australia">Австралия</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/antarctica">Антарктида</a>
+              <a class="nav-link" href="/continent/antarctica">Антарктида</a>
             </li>
           </ul>
 
