--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,6 +3,7 @@
 <!-- <h2><%= error.status %></h2> -->
 <div class="error_page">
   <img src="<%= picture %>" alt="error 404" class="error_img">
-  <h1><%= title %><br><%= message %></h1> 
-  <pre><%= error.stack %></pre>
+  <h1><%= title %></h1> 
+  <h2><%= message %> <%= error.status %></h2>
+  <!-- <pre><%= error.stack %></pre> -->
 </div>
