--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,15 +4,23 @@
   box-sizing: border-box;
 }
 
-body {
-  background: #ffffff;
+
+body{
+  background: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: serif;
 }
+
+
+header{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 18px;
+}
+
 
 /* web-page  */
 .pages{
-  margin-top: 40px;
+  padding-top: 40px;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-around;
@@ -27,6 +35,7 @@ body {
   word-spacing: 3px;
   font-size: 1.4em;
   font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .pages_text>h1{
   margin-bottom: 40px;
