--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -27,7 +27,7 @@
           </ul>
           <ul class="navbar-nav navbar-right">
             <li class="log">
-              <a class="nav-link" href="/">Войти</a>
+              <a class="nav-link" href="/logreg">Войти</a>
             </li>
           </ul>
         </div>
