Глобальная переменная user

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,13 @@
 <% layout('./layout/page.ejs') %>
 
+<% if(user) {%>
+    <!-- Случай залогиненного пользователя -->
+    <h3>Привет <%= user.username %>!</h3>
+   <% }else{ %>
+    <!-- Случай не залогиненного пользователя -->
+    <h3>Для просмотра всех страниц сайта, пройдите регистрацию!</h3>
+   <% } %>
+   
 <h1><%= title %></h1>
 <p><%= text %></p>
 <p>Счётчик: <%= counter %></p>
