--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -25,11 +25,20 @@
                 </li>
               <% })} %>
           </ul>
-          <ul class="navbar-nav navbar-right">
-            <li class="log">
-              <a class="nav-link" href="/logreg">Войти</a>
-            </li>
-          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <%if(user){%>
+              <form action="/logout" method="post">
+                <li>
+                  <button type="submit" class="btn btn-link">Выйти</button>
+                </li>
+              </form>
+            <% } else { %>
+                <li>
+                  <a href="/logreg">Войти</a>
+                </li>
+            <% } %>
+        </ul>
+        
         </div>
       </nav>
     </header>
