--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,23 @@
 <% layout('./layout/page.ejs') %>
-
-<% if(user) {%>
-    <!-- Случай залогиненного пользователя -->
-    <h3>Привет <%= user.username %>!</h3>
-   <% }else{ %>
-    <!-- Случай не залогиненного пользователя -->
-    <h3>Для просмотра всех страниц сайта, пройдите регистрацию!</h3>
-   <% } %>
-   
-<h1><%= title %></h1>
-<p><%= text %></p>
-<p>Счётчик: <%= counter %></p>
+<div class="main_page">
+    <div class="log_massage">
+        <% if(user) {%>
+            <!-- Случай залогиненного пользователя -->
+            <div class="log">
+                <h3 class="log">Привет <%= user.username %>!</h3>
+            </div>
+           <% }else{ %>
+            <!-- Случай не залогиненного пользователя -->
+            <div class="notlog">
+                <h3 class="notlog">Для просмотра всех страниц сайта, пройдите регистрацию!</h3>
+            </div>
+           <% } %>
+    </div>
+    
+    <div class="about_page">
+        <h1><%= title %></h1>
+        <p><%= text %></p>
+    </div>
+    
+    <p>Счётчик переходов: <%= counter %></p>
+</div>
