--- a/views/logreg.ejs
+++ b/views/logreg.ejs
@@ -1,8 +1,10 @@
 <% layout('./layout/page.ejs') %>
 
 <div class="conteiner">
-    <h1>Регистрация и вход</h1>
-    <p>Введите имя пользователя и пароль, если такого пользователя нет, то он будет создан.</p>
+    <div>
+        <h1>Регистрация и вход</h1>
+        <p>Введите имя пользователя и пароль, если такого пользователя нет, то он будет создан.</p>
+    </div>
     <form class="form-horizontal" action="/logreg" method="post">
         <div class="form-group">
             <label class="control-label col-sm-1">Имя</label>
