--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -10,42 +10,49 @@
   </head>
 
   <body>
-    <header>
-      <nav class="navbar navbar-expand-sm bg-light navbar-light">
-        <div class="container-fluid">
-          <ul class="navbar-nav">
-            <li class="navbar-nav navbar-left"> 
-              <a class="nav-link" href="/">Главная</a>
-            </li>
+    <div class="webpage">
+      <header>
+        <nav class="navbar navbar-expand-sm bg-light navbar-light">
+          <div class="container-fluid">
+            <ul class="navbar-nav">
+              <li class="navbar-nav navbar-left"> 
+                <a class="nav-link" href="/">Главная</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav">
+                <% if(typeof nav == 'object' && nav){ nav.forEach(function(continent){ %>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/continent/<%= continent.nick %>"><%= continent.title %></a>
+                  </li>
+                <% })} %>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <%if(user){%>
+                <form action="/logout" method="post">
+                  <li>
+                    <button type="submit" class="btn btn-link">Выйти</button>
+                  </li>
+                </form>
+              <% } else { %>
+                  <li>
+                    <a href="/logreg">Войти</a>
+                  </li>
+              <% } %>
           </ul>
-          <ul class="navbar-nav">
-              <% if(typeof nav == 'object' && nav){ nav.forEach(function(continent){ %>
-                <li class="nav-item">
-                  <a class="nav-link" href="/continent/<%= continent.nick %>"><%= continent.title %></a>
-                </li>
-              <% })} %>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <%if(user){%>
-              <form action="/logout" method="post">
-                <li>
-                  <button type="submit" class="btn btn-link">Выйти</button>
-                </li>
-              </form>
-            <% } else { %>
-                <li>
-                  <a href="/logreg">Войти</a>
-                </li>
-            <% } %>
-        </ul>
-        
+          
+          </div>
+        </nav>
+      </header>
+  
+      <main>
+        <%- body %>
+      </main>  
+
+      <footer>
+        <div> 
+          <h4>Express project "Continents"</h4>
         </div>
-      </nav>
-    </header>
-
-    <main>
-      <%- body %>
-    </main>
-
+      </footer>
+    </div>
   </body>
 </html>
