MySQL Заполнение меню из базы

--- a/views/continent.ejs
+++ b/views/continent.ejs
@@ -6,6 +6,6 @@
     <p>Описание континента: <%= desc %></p>
   </div>
   <div class="pages_img">
-    <img src="<%= picture %>" alt="картинка континента"/ class=>
+    <img src="<%= picture %>" alt="картинка континента"/>
   </div>
 </div>
