--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -27,7 +27,7 @@
                 <% })} %>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <%if(user){%>
+              <%if(user.length > 0){%>
                 <form action="/logout" method="post">
                   <li>
                     <button type="submit" class="btn btn-link">Выйти</button>
