--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <% if(user.length > 0) {%>
             <!-- Случай залогиненного пользователя -->
             <div class="log">
-                <h3 class="log">Привет <%= users[0].username %>!</h3>
+                <h3 class="log">Привет <%= user[0].username %>!</h3>
             </div>
            <% }else{ %>
             <!-- Случай не залогиненного пользователя -->
